# tau2-bench

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  tau3-round-1.md
.cursor/rules/: branching-strategy.mdc
analysis_code/: analyze_tools_spec.py  build_api_dependency_graph.py  custom_schema_generator.py  schema_types.py  visualize_api_dep_graph.py
analysis_code/artifacts/db_metadata/: airline_db_metadata.json  retail_db_metadata.json
analysis_code/tools_tester_code/: test_tools.py
analyzer_code/: analyze_tools_spec.py
analyzer_code/artifacts/schemas/: airline_tool_signatures.json  retail_tool_signatures.json
data/.embeddings_cache/: docs.pkl
data/simulations/knowledge/: analysis_results.json  analysis_results.txt
data/voice_results/: absolute_vs_relative_analysis.md  comparison_report.md
data/voice_results/paper/: ablation_table.csv  ablation_table_single.tex  combined_comparison_table.csv  combined_comparison_table.tex  conditions_ablation_table.tex  conditions_ablation_table_single.tex  core_metrics_table.tex  main_results_table.tex  voice_quality_aggregated_table.tex  voice_quality_table.csv  voice_vs_text_table.tex
data/voice_results/performance_analysis/: voice_metrics.csv
data/voice_results/tau_voice_new_analysis/: absolute_vs_relative_analysis.md  comparison_report.md
docs/: cli-reference.md  getting-started.md  leaderboard-submission.md  running_simulations.md
papers/tau-voice/: main.aux  main.tex
papers/tau-voice/appendix/: additional_results.tex
papers/tau-voice/contents/: abstract.tex  conclusion.tex  experiments.tex  intro.tex  results.tex
papers/tau-voice/results/: ablation_table.csv  ablation_table.tex  ablation_table_single.tex  absolute_vs_relative_analysis.md  combined_comparison_table.csv  combined_comparison_table.tex  comparison_report.md  (+12 more)
papers/tau-voice_submission/: main.blg  main.tex  tau-voice.bib
scripts/: trim_experiment_data.py
src/tau2/: cli.py  config.py  registry.py  run.py  run_legacy.py
tests/: AGENTS.md
tests/test_streaming/: test_chunking.py  test_discrete_time_audio_native_agent.py  test_linearization.py
(+491 files in other folders)
